--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Complejo de cabañas en La Cumbrecita, Córdoba. Consultá disponibilidad y reservá tu estadía con atención personalizada." />
-  <title>Cabañas | La Cumbrecita, Córdoba</title>
+  <meta name="description" content="Cabañas Sol y Luna en La Cumbrecita, Córdoba. Consultá disponibilidad y reservá tu estadía con atención personalizada." />
+  <title>Cabañas Sol y Luna | Potrero de Garay, Córdoba</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,8 +22,10 @@
   <!-- Header -->
   <header class="header" id="header">
     <nav class="nav" aria-label="Navegación principal">
-      <a href="#" class="logo" aria-label="Inicio">
-        <i class="fas fa-mountain"></i> Cabañas La Cumbrecita
+      <!-- Logo (imagen) -->
+      <a href="#" class="logo" aria-label="Inicio Cabañas Sol y Luna">
+        <!-- Usá PNG si querés: img/logo-solyluna.png -->
+        <img src="img/logo-solyluna.svg" alt="Cabañas Sol y Luna" />
       </a>
 
       <ul class="nav-links" id="navLinks">
@@ -32,6 +34,8 @@
         <li><a href="#servicios">Servicios</a></li>
         <li><a href="#calificaciones">Calificaciones</a></li>
         <li><a href="#contacto">Contacto</a></li>
+        <li><a href="#ubicacion">Ubicación</a></li>
+
       </ul>
 
       <div class="nav-actions">
@@ -376,6 +380,38 @@
         </div>
       </div>
     </section>
+<!-- Ubicación (MAPA) -->
+<section class="map-section" id="ubicacion" aria-label="Ubicación">
+  <div class="container">
+    <div class="section-header">
+      <h2>Ubicación</h2>
+      <p>Estamos en Potrero de Garay, Córdoba. Mirá el mapa y llegá fácil.</p>
+    </div>
+  </div>
+
+  <div class="map-card map-card--full">
+    <div class="map-embed" role="application" aria-label="Mapa de Google: Potrero de Garay, Córdoba">
+      <iframe
+        title="Mapa - Potrero de Garay, Córdoba"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://www.google.com/maps?q=Potrero%20de%20Garay%2C%20C%C3%B3rdoba&output=embed">
+      </iframe>
+    </div>
+
+    <div class="map-actions container">
+      <a class="btn-primary" target="_blank" rel="noopener"
+         href="https://www.google.com/maps/search/?api=1&query=Potrero%20de%20Garay%2C%20C%C3%B3rdoba">
+        <i class="fas fa-map-location-dot"></i>&nbsp;Abrir en Google Maps
+      </a>
+
+      <a class="btn-outline" href="#buscador">
+        <i class="fas fa-calendar-check"></i>&nbsp;Consultar disponibilidad
+      </a>
+    </div>
+  </div>
+</section>
+
 
     <!-- CTA final (sección negra) -->
     <section class="cta-final" id="contacto">
@@ -401,7 +437,7 @@
 
           <div class="cta-final-extra">
             <span><strong>Horario:</strong> 09:00 a 20:00</span><br />
-            <span><strong>Ubicación:</strong> La Cumbrecita, Córdoba</span>
+            <span><strong>Ubicación:</strong> Potrero de Garay, Córdoba</span>
           </div>
         </div>
 
@@ -409,9 +445,9 @@
           <h4>Datos</h4>
 
           <ul>
-            <li><i class="fas fa-phone"></i> +54 9 3546 57-4999</li>
+            <li><i class="fas fa-phone"></i> +54 9 3546 57-1111</li>
             <li><i class="fas fa-envelope"></i> reservas@tus-cabanas.com</li>
-            <li><i class="fas fa-location-dot"></i> La Cumbrecita, Córdoba</li>
+            <li><i class="fas fa-location-dot"></i> Potrero de Garay, Córdoba</li>
           </ul>
 
           <p class="cta-tip">
@@ -426,7 +462,7 @@
   <footer class="footer">
     <div class="footer-content container">
       <div class="footer-section">
-        <h3>Cabañas La Cumbrecita</h3>
+        <h3>Cabañas Sol y Luna</h3>
         <p>Atención personalizada todo el año. Consultá por fechas, tarifas y promos.</p>
       </div>
 
@@ -443,9 +479,9 @@
       <div class="footer-section">
         <h3>Contacto</h3>
         <ul class="footer-links">
-          <li><a href="tel:+5493546574999"><i class="fas fa-phone"></i> +54 9 3546 57-4999</a></li>
+          <li><a href="tel:+5493546574999"><i class="fas fa-phone"></i> +54 9 3546 57-1111</a></li>
           <li><a href="mailto:reservas@tus-cabanas.com"><i class="fas fa-envelope"></i> reservas@tus-cabanas.com</a></li>
-          <li><span><i class="fas fa-location-dot"></i> La Cumbrecita, Córdoba</span></li>
+          <li><span><i class="fas fa-location-dot"></i> Potrero de Garay, Córdoba</span></li>
         </ul>
       </div>
 
@@ -463,7 +499,7 @@
     </div>
 
     <div class="footer-bottom container">
-      <p>&copy; 2025 Cabañas La Cumbrecita. Todos los derechos reservados.</p>
+      <p>&copy; 2025 Cabañas Sol y Luna. Todos los derechos reservados.</p>
     </div>
   </footer>
 
