--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
 
+
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
@@ -19,6 +21,8 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="css.css" />
+
+
 </head>
 
 <body>
@@ -36,6 +40,7 @@
         <li><a href="#servicios">Servicios</a></li>
         <li><a href="#calificaciones">Calificaciones</a></li>
         <li><a href="#contacto">Contacto</a></li>
+        <li><a href="cabañas2/index.html">Disponibilibidad</a></li>
       </ul>
 
       <!-- Botón menú mobile -->
@@ -50,7 +55,7 @@
     <!-- Menú mobile -->
     <div class="mobile-menu" id="mobileMenu" aria-hidden="true">
       <ul>
-        <li><a href="#propiedades" class="mobile-link">Cabañas</a></li>
+        <li><a href="cabañas2/index.html" class="mobile-link">cabañas2</a></li>
         <li><a href="#porque" class="mobile-link">¿Por qué elegirnos?</a></li>
         <li><a href="#servicios" class="mobile-link">Servicios</a></li>
         <li><a href="#calificaciones" class="mobile-link">Calificaciones</a></li>
@@ -314,11 +319,11 @@
               WhatsApp
             </a>
 
-            <a href="#buscador" class="cta-form">
-              <i class="fas fa-calendar-check"></i>
-              Consultar disponibilidad
-            </a>
-          </div>
+            <a href="cabañas2/" class="cta-form">
+  <i class="fas fa-calendar-check"></i>
+  Consultar disponibilidad
+</a>
+
 
           <div class="cta-final-extra">
             <span><strong>Horario:</strong> 09:00 a 20:00</span><br />
