--- a/cabañas2/index.html
+++ b/cabañas2/index.html
@@ -2,120 +2,150 @@
 <html lang="es-AR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Reservas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calendario de Reservas</title>
 
   <!-- Flatpickr -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
-  <!-- Tu CSS -->
-  <link rel="stylesheet" href="css.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="./css.css?v=31" />
 </head>
+
 <body>
-  <div class="app">
-    <header class="header">
-      <div>
-        <h1>Calendario de Reservas</h1>
-        <p class="muted">Las fechas anteriores a hoy quedan bloqueadas. Las reservas confirmadas aparecen en gris.</p>
-      </div>
-      <div class="legend">
-        <span><i class="dot dot-free"></i> Disponible</span>
-        <span><i class="dot dot-block"></i> Ocupado</span>
-        <span><i class="dot dot-past"></i> Pasado</span>
-      </div>
-    </header>
+  <header class="topbar">
+    <a class="back" href="../index.html" aria-label="Volver al inicio">← Atrás</a>
 
-    <main class="grid">
+    <div class="brand">
+      <div class="brand-title">Calendario de Reservas</div>
+      <div class="brand-sub">
+        Las fechas anteriores a hoy quedan bloqueadas. Las reservas confirmadas aparecen en rojo.
+      </div>
+    </div>
+
+    <div class="legend" aria-label="Leyenda">
+      <span class="legItem"><i class="dot dot-free"></i> Disponible</span>
+      <span class="legItem"><i class="dot dot-booked"></i> Ocupado</span>
+      <span class="legItem"><i class="dot dot-past"></i> Pasado</span>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <div class="grid">
+
+      <!-- Solicitud -->
       <section class="card">
-        <h2>Solicitud</h2>
+        <div class="cardHead">
+          <h2>Solicitud</h2>
+          <p class="sub">Completá tus datos y elegí fechas disponibles.</p>
+        </div>
 
-        <form id="formReserva" class="form">
-          <label>
-            Cabaña
-            <select id="cabana" required>
-              <option value="Cabana 1">Cabaña 1</option>
-              <option value="Cabana 2">Cabaña 2</option>
-              <option value="Cabana 3">Cabaña 3</option>
-            </select>
-          </label>
+        <div class="cardBody">
+          <form id="formReserva" class="form">
+            <div class="formGrid">
 
-          <label>
-            Personas
-            <select id="personas" required>
-              <option value="2">2 personas</option>
-              <option value="4">4 personas</option>
-              <option value="6">6 personas</option>
-            </select>
-          </label>
+              <div class="field">
+                <span>Cabaña</span>
+                <select id="cabana" required>
+                  <option value="Cabana 1">Cabaña 1</option>
+                  <option value="Cabana 2">Cabaña 2</option>
+                  <option value="Cabana 3">Cabaña 3</option>
+                  <option value="Cabana 4">Cabaña 4</option>
+                </select>
+              </div>
 
-          <label>
-            Nombre
-            <input id="nombre" type="text" placeholder="Ej: Pepito" required />
-          </label>
+              <div class="field">
+                <span>Personas</span>
+                <select id="personas" required>
+                  <option value="2">2 personas</option>
+                  <option value="3">3 personas</option>
+                  <option value="4">4 personas</option>
+                  <option value="5">5 personas</option>
+                  <option value="6">6 personas</option>
+                  <option value="7">7 personas</option>
+                  <option value="8">8 personas</option>
+                  <option value="10">10 personas</option>
+                  <option value="12">12 personas</option>
+                </select>
+              </div>
 
-          <label>
-            Teléfono (WhatsApp)
-            <input id="telefono" type="tel" placeholder="Ej: 3515555555" required />
-          </label>
+              <div class="field span2">
+                <span>Nombre</span>
+                <input id="nombre" type="text" placeholder="Ej: Pepito" required />
+              </div>
 
-          <div class="row2">
-            <label>
-              Ingreso (check-in)
-              <input id="checkin" type="text" placeholder="Seleccioná fecha" required />
-            </label>
+              <div class="field span2">
+                <span>Teléfono (WhatsApp)</span>
+                <input id="telefono" type="text" placeholder="Ej: 3515555555" inputmode="numeric" />
+              </div>
 
-            <label>
-              Salida (check-out)
-              <input id="checkout" type="text" placeholder="Seleccioná fecha" required />
-            </label>
-          </div>
+              <div class="field">
+                <span>Ingreso (check-in)</span>
+                <input id="checkin" type="text" placeholder="Seleccioná fecha" readonly />
+              </div>
 
-          <button class="btn" type="submit" id="btnEnviar">Enviar solicitud</button>
+              <div class="field">
+                <span>Salida (check-out)</span>
+                <input id="checkout" type="text" placeholder="Seleccioná fecha" readonly />
+              </div>
 
-          <div id="msg" class="msg" aria-live="polite"></div>
+              <!-- Precio -->
+              <div id="priceBox" class="priceBox span2" hidden>
+                <div class="priceRow"><span>Noches</span><b id="pNoches">0</b></div>
+                <div class="priceRow"><span>Precio por noche</span><b id="pRate">$0</b></div>
+                <div class="priceRow total"><span>Total</span><b id="pTotal">$0</b></div>
+                <div class="priceHint" id="pHint"></div>
+              </div>
 
-          <div id="confirmBox" class="confirmBox hidden">
-            <h3>Confirmación</h3>
-            <p>La solicitud quedó <b>PENDIENTE</b>. Para bloquear definitivamente las fechas, hay que confirmar.</p>
+              <div class="span2">
+                <button id="btnEnviar" type="submit" class="btnPrimary">Enviar solicitud</button>
+                <div id="msg" class="msg"></div>
+              </div>
 
-            <div class="actions">
-              
-              <a id="btnWhats" class="btn btn-secondary" target="_blank" rel="noopener">Enviar por WhatsApp</a>
             </div>
+          </form>
 
-            <p class="muted small">
-              Cuando el cliente abre el link de confirmación, la reserva pasa a <b>CONFIRMADA</b> y el calendario se actualiza.
-            </p>
-          </div>
-        </form>
+          <div class="footnote">UI servida por Apps Script + datos en Google Sheets.</div>
+        </div>
       </section>
 
+      <!-- Disponibilidad -->
       <section class="card">
-        <h2>Disponibilidad</h2>
+        <div class="cardHead">
+          <h2>Disponibilidad</h2>
+          <p class="sub">Calendario (bloquea pasado + confirmadas)</p>
+        </div>
 
-        <div class="calendarWrap">
-          <div>
-            <p class="muted small">Calendario (bloquea pasado + confirmadas)</p>
-            <div id="calInline"></div>
-          </div>
+        <div class="cardBody">
+          <div class="availability">
 
-          <div class="list">
-            <p class="muted small">Reservas confirmadas (cabaña seleccionada)</p>
-            <ul id="listaConfirmadas" class="ul"></ul>
+            <div class="calPanel">
+              <div class="calPanelHead">
+                <div class="calTitle">Calendario</div>
+                <div class="calHint">Elegí fechas libres</div>
+              </div>
+              <div id="calInline"></div>
+            </div>
+
+            <div class="listPanel">
+              <div class="listPanelHead">
+                <div class="listTitle">Reservas confirmadas</div>
+                <div class="listHint">(cabaña seleccionada)</div>
+              </div>
+              <ul id="listaConfirmadas" class="list"></ul>
+            </div>
+
           </div>
         </div>
       </section>
-    </main>
 
-    <footer class="footer muted small">
-      UI servida por Apps Script + datos en Google Sheets (sin base de datos paga).
-    </footer>
-  </div>
+    </div>
+  </main>
 
-  <!-- Flatpickr JS -->
+  <!-- Flatpickr -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
-  <!-- Tu JS -->
-  <script src="js.js"></script>
+  <!-- JS -->
+  <script src="./js.js?v=31"></script>
 </body>
 </html>
